--- a/src/components/Contact/index.css
+++ b/src/components/Contact/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
+
+
 * {
   margin: 0;
   padding: 0;
@@ -18,11 +20,12 @@ p {
 }
 
   
-  
+
   .footer-content {
     display: flex;
     justify-content: space-around;
     margin: 20px 0;
+    margin-bottom: 160px;
   }
   
   .footer-content h2 {
@@ -52,8 +55,9 @@ p {
   .contact-section { 
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    margin-top: 100px;
   }
   ul{
     margin-left: 50px;
