--- a/src/components/Experience/index.css
+++ b/src/components/Experience/index.css
@@ -13,62 +13,41 @@ body {
   .title {
     text-align: center;
     font-size: 36px;
+    margin-bottom: 20px;
   }
   .section__text__p1 {
     text-align: center;
   }
 
-.skill-con{
+.skill-container{
+  background: white;
+  border-radius: 0.5rem;
+  border: rgb(53, 53, 53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  height: 45px;
+  width: 130px;
+  margin-bottom: 15px;
+  margin-right: 5px;
+}
+.skill-container:hover{
+  border: lightblue 0.1rem solid;
+  font-weight: 900;
+}
+
+.skill-heading{
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 15px;
+  margin-top: 10px;
+}
+.details-section{
   display: flex;
   flex-direction: column;
   align-items: center;
-}  
-@media screen and (min-width: 390px) {
-  .skill-con{
-    display: flex;
-    flex-direction: row;
-  }
-  
 }
-.details-container {
-    padding: 1.5rem;
-    flex: 1;
-    background: white;
-    border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
-    border-color: rgb(163, 163, 163);
-    text-align: center;
-  }
-
-  @media screen and (min-width: 390px) {
-    .details-container{
-      height: auto;
-    }
-  }
-
-  @media screen and (min-width: 1100px) {
-    .details-container{
-      margin-top: 50px;
-      width: 400px;
-    }
-  }
-
-.experience-sub-title {
-    color: rgb(85, 85, 85);
-    font-weight: 600;
-    font-size: 20px;
-    margin-bottom: 2rem;
-}
-  
-.experience-details-container {
+.skill-all-container{
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  flex-direction: column;
-}
-
-  
-  
-.badge-icon{
-  font-size: 27px;
-  margin-top: 4px;
 }
