--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,5 +1,7 @@
 
-  
+  .copy-right{
+    font-size: 11px;
+  }
   .footer-icons .icon {
     margin: 10px;
     color: black;
@@ -45,9 +47,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
 }
-
+@media screen and (min-width:350px) {
+  .copy-right{
+    font-size: 14px;
+  }
+  
+}
 @media screen and (min-width: 590px) {
     .icons-copy-right{
         display: flex;
@@ -55,23 +61,25 @@
         justify-content: space-between;
     }
     .footer-icons{
-        margin: 10px;
+        margin-left: 10px;
     }
     .footer-copyright{
-        margin: 10px;
+        margin-right: 10px;
         font-size: 14px;
+    }
+    .copy-right{
+      font-size: 16px;
     }
     
 }
 @media screen and (min-width: 1100px) {
     .footer-icons{
-        margin: 5px;
+        margin-left: 5px;
     }
     .footer-copyright{
-        margin: 5px;
+        margin-right: 5px;
     }
-    .icons-copy-right{
-        margin-top: 55px;
+    .copy-right{
+      font-size: 19px;
     }
-    
 }
