--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,12 +1,12 @@
+
 @media screen and (min-width: 1100px) {
     .home-container{
         display: flex;
         align-items: center;
         justify-content: center;
         margin-top: 70px;
-
-    }
-    
+        margin-bottom: 60px;
+    }   
 }
 
 .profile-container{
@@ -88,7 +88,9 @@
     align-items: center;
     justify-content: center;
     margin: 10px;
-    
+}
+.icon-container:hover{
+  background-color: #007bff;
 }
 .icon{
     color: white;
@@ -108,7 +110,7 @@
     
 }
 
-.btn {
+.btns {
     font-weight: 600;
     transition: all 300ms ease;
     padding: 1rem;
