--- a/src/components/Skill/index.css
+++ b/src/components/Skill/index.css
@@ -1,27 +1,22 @@
-.article-container {
-    display: flex;
-    text-align: initial;
-    flex-wrap: wrap;
-    flex-direction: row;
-    gap: 2.5rem;
-    justify-content: space-around;
-}
-  
-.badge{
-  width: 72px;
+.icon-image{
+  width: 30px;
   padding: 0px;
   cursor: pointer;
-  height: 45px;
+  height: 25px;
+  margin-right: 4px;
+}
+.skill-section{
+  display: flex;
+  margin-top: 10px;
+  margin-left: 5px;
 }
  
-article {
-    display: flex;
-    width: 10rem;
-    justify-content: space-around;
-    gap: 0.5rem;
-}
-@media screen and (min-width: 1100px) {
-    article{
-        padding-right: 16px;
+@media screen and (min-width: 768px) {
+    .skill{
+      font-size: 15px;
+      margin-left: 2px;
+    }
+    .icon-image{
+        margin-left: 3px;
     }
 }
