--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -90,7 +90,7 @@
     margin: 10px;
 }
 .icon-container:hover{
-  background-color: #007bff;
+  background-color: #ffffff;
 }
 .icon{
     color: white;
