--- a/src/components/Contact/index.css
+++ b/src/components/Contact/index.css
@@ -25,7 +25,7 @@ p {
     display: flex;
     justify-content: space-around;
     margin: 20px 0;
-    margin-bottom: 160px;
+    margin-bottom: 20px;
   }
   
   .footer-content h2 {
@@ -47,7 +47,7 @@ p {
     text-decoration: none;
   }
   
-  .footer-content ul li a:hover {
+  .footer-content ul li: hover {
     text-decoration: underline;
   }
   
@@ -57,7 +57,7 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    margin-top: 20px;
   }
   ul{
     margin-left: 50px;
@@ -88,6 +88,27 @@ p {
         margin-bottom: 10px;
         margin-top: 10px;
       }
+    .quick-link{
+      font-size: 24px;
+    }
     
 }
-
+.quick-link{
+  padding: 10px;;
+}
+.quick-links-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .quick-links-container{
+    flex-direction: row;
+  }
+  .quick-link{
+    font-size: 20px;
+  }
+}
+.contact-a{
+  text-decoration: none;
+}
